--- a/Estilos.css
+++ b/Estilos.css
@@ -1,12 +1,7 @@
 body
 {
-<<<<<<< HEAD
-    color: blueviolet;
-    text-align: center;
-    font-family: "Arial";
 
-=======
-    color: #333;
+    color: red;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -44,5 +39,5 @@ body
 #container h1
 {
     font-size: 20px;
->>>>>>> cabecera
+
 }
