--- a/Estilos.css
+++ b/Estilos.css
@@ -1,12 +1,6 @@
 body
 {
-<<<<<<< HEAD
-    color: blueviolet;
-    text-align: center;
-    font-family: "Arial";
-
-=======
-    color: #333;
+    color: blue;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -44,5 +38,4 @@ body
 #container h1
 {
     font-size: 20px;
->>>>>>> cabecera
 }
